--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <div id="header">
+            <img src="/static/Flux_white_logo.svg">
             <h1 id="title">Welcome!</h1>
         </div>
         <div id="main">
