fixed bug, only make api calls if address if vaild

--- a/static/style.css
+++ b/static/style.css
@@ -17,6 +17,10 @@ align-items: center;
 justify-content: center;
 }
 
+#header > img {
+  height: 5vh;
+}
+
 #title {
 color: #FFFFFF;
 height: auto;
